# nook

./: .env.example  .gitignore  README.md  app.py  config.example.json  main.py  pyproject.toml
static/css/: style.css
static/js/: app.js
templates/: index.html
