[project]
name = "nook"
version = "0.1.0"
description = "A self-hosted, local-first chat UI for Ollama with voice, vision, and web search"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "flask>=3.1.3",
    "kokoro-onnx>=0.5.0",
    "ollama>=0.6.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
]
